# bangladesh

./: .gitignore  Cargo.toml  README.md  agent.md  architecture.md  plan.md  tags.txt
.cargo/: config.toml
.github/: copilot-instructions.md
src/: main.rs
src/shared/: mod.rs  terrain_runtime.rs  world.rs
