[package]
name = "bangladesh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bevy = "0.18.1"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
osmpbf = "0.3.8"
reqwest = { version = "0.13.2", features = ["blocking"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
