[package]
name = "bangladesh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bevy = "0.18.1"
clap = { version = "4.6.0", features = ["derive"] }
geo = "0.32.0"
indicatif = "0.18.4"
memmap2 = "0.9.10"
osmpbf = "0.3.8"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
rkyv = "0.8.15"
rstar = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
